@@ -29,6 +29,7 @@ A</A>.
         <LI><A HREF="drawing.html#fl_begin_offscreen"><TT>fl_begin_offscreen</TT></A></LI>
         <LI><A HREF="drawing.html#fl_begin_points"><TT>fl_begin_points</TT></A></LI>
         <LI><A HREF="drawing.html#fl_begin_polygon"><TT>fl_begin_polygon</TT></A></LI>
+        <LI><A HREF="common.html#fl_box"><TT>fl_box</TT></A></LI>
         <LI><A HREF="osissues.html#WIN32.gdi"><TT>fl_brush</TT></A> (WIN32)</LI>
         <LI><A HREF="drawing.html#fl_can_do_alpha_blending"><TT>fl_can_do_alpha_blending</TT></A></LI>
         <LI><A HREF="#fl_casealphasort"><TT>fl_casealphasort</TT></A></LI>
